# gnu-graphics

./: AUTHORS  COPYING  ChangeLog  KNOWN_BUGS  Makefile  Makefile.am  Makefile.in  PORTING  README.md  TODO  aclocal.m4  config.hin  configure  configure.ac  graphics.texi  makelinks
dist-stat/: Makefile  Makefile.am  Makefile.in  abs.c  atob.c  btoa.c  cor.c  cusum.c  gas.c  getname.c  getnum.c  gps.h  hilo.c  log.c  mean.c  message.c  mod.c  pair.c  power.c  prhelp.c  prnum.c  prod.c  qsort.c  rand.c  random.c  rank.c  rdvec.c  round.c  setprecn.c  siline.c  subs.c  total.c  var.c
double/: Makefile  Makefile.am  Makefile.in  double.c  double.man
getopt/: Makefile  getopt.c  getopt.h  getopt1.c
graph/: .gdbinit  .gdbinit.orig  ChangeLog  Makefile  Makefile.am  Makefile.in  extern.h  graph.c  max.c  read_file.c  sin.c  write_plot.c
include/: getopt.h  libplot.h  sys-defines.h
libgetopt/: ChangeLog  Makefile.am  Makefile.in  getopt.c  getopt1.c
libplot/: Makefile.am  Makefile.in  arc.c  circle.c  cont.c  erase.c  fill.c  fontsize.c  label.c  line.c  move.c  openpl.c  rotate.c
o/: Makefile.am
plot2fig/: ChangeLog  Makefile  Makefile.am  Makefile.in  alabel.c  arc.c  circle.c  closepl.c  color.c  cont.c  dot.c  draw_line.c  erase.c  extern.h  fill.c  fontname.c  fontsize.c  label.c  line.c  linemod.c  move.c  openpl.c  plot.c  plot2fig.c  plot2fig.man  point.c  rotate.c  space.c
plot2plot/: .gdbinit  Makefile  Makefile.am  Makefile.in  plot2.c  plot2plot.c
plot2ps/: .gdbinit  ChangeLog  Makefile  Makefile.am  Makefile.in  README  alabel.c  arc.c  atend.pl  atend.sh  box.c  circle.c  close.c  color.c  cont.c  dot.c  drawline.c  erase.c  fill.c  fontsize.c  header.c  label.c  line.c  linemod.c  move.c  open.c  plot.c  plot2ps.c  plot2ps.man  point.c  range.c  rotate.c  setfont.c  space.c
plot2ps/afm/: wid.awk  wid.csh
plot2tek/: ChangeLog  Makefile  Makefile.am  Makefile.in  alabel.c  arc.c  circle.c  closepl.c  color.c  cont.c  dot.c  erase.c  fontname.c  fontsize.c  label.c  line.c  linemod.c  move.c  openpl.c  plot.c  plot2tek.c  point.c  rotate.c  space.c
tek2plot/: 4014.doc  ChangeLog  Makefile  Makefile.am  Makefile.in  README  alabel.c  closepl.c  color.c  fontname.c  linemod.c  point.c  putshort.c  space.c  tek2.c  tek2plot.c  ts.c
test/: Makefile  Makefile.am  Makefile.in  graph.expected.output  plot2fig.expected.output  plot2plot.expected.output  plot2ps.expected.output  plot2tek.expected.output  tek2plot.expected.output  test1.csh
xplot/: .gdbinit  ChangeLog  Imakefile  Makefile  Makefile.X  Makefile.am  Makefile.in  alabel.c  xplot.c  xplot.man
