lib_LTLIBRARIES = libplot.la
libplot_la_SOURCES = alabel.c arc.c circle.c closepl.c color.c cont.c	\
erase.c fill.c fontname.c fontsize.c label.c line.c linemod.c move.c	\
openpl.c point.c putshort.c rotate.c space.c
libplot_la_LDFLAGS = -version-info 0:0:0
include_HEADERS = ../include/libplot.h
AM_CPPFLAGS = -I$(srcdir)/../include
libplot_adir = ../include
